--- a/Code/OrganizationOfData.DesktopClient/Views/RecordControl.xaml
+++ b/Code/OrganizationOfData.DesktopClient/Views/RecordControl.xaml
@@ -28,10 +28,10 @@
             <materialDesign:ColorZone Mode="{Binding ColorZoneMode}" Padding="5">
                 <Button Style="{StaticResource MaterialDesignToolForegroundButton}" Margin="5 3 5 3"  Command="{x:Static materialDesign:Flipper.FlipCommand}">
                     <StackPanel Orientation="Horizontal">
-                        <Label Content="Id:" FontWeight="Bold" VerticalAlignment="Center" />
-                        <Label Grid.Column="1" Content="{Binding Record.Person.Id}" VerticalAlignment="Center" />
-                        <Label Grid.Column="2" Content="Status:" VerticalAlignment="Center" FontWeight="Bold" />
-                        <Label Grid.Column="3" Content="{Binding Record.Status, Converter={StaticResource statusConverter}}" VerticalAlignment="Center" />
+                        <Label Content="Id:" FontWeight="Bold" VerticalAlignment="Center" Foreground="{Binding LabelColor}" />
+                        <Label Grid.Column="1" Content="{Binding Record.Person.Id}" VerticalAlignment="Center" Foreground="{Binding LabelColor}" />
+                        <Label Grid.Column="2" Content="Status:" VerticalAlignment="Center" FontWeight="Bold" Foreground="{Binding LabelColor}" />
+                        <Label Grid.Column="3" Content="{Binding Record.Status, Converter={StaticResource statusConverter}}" VerticalAlignment="Center" Foreground="{Binding LabelColor}"/>
                     </StackPanel>
                 </Button>
             </materialDesign:ColorZone>
