--- a/Code/OrganizationOfData.DesktopClient/Views/NewRecordDialog.xaml
+++ b/Code/OrganizationOfData.DesktopClient/Views/NewRecordDialog.xaml
@@ -46,8 +46,8 @@
             <materialDesign:Card Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" materialDesign:ShadowAssist.ShadowDepth="Depth3" Background="{DynamicResource PrimaryHueMidBrush}" Margin="10" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
 
                 <StackPanel Margin="10" Grid.ColumnSpan="2" Orientation="Horizontal" VerticalAlignment="Center">
-                    <materialDesign:PackIcon Kind="PersonAdd" Width="50" Height="50" Margin="0 0 20 0" />
-                    <TextBlock VerticalAlignment="Center" Style="{StaticResource MaterialDesignDisplay1TextBlock}">
+                    <materialDesign:PackIcon Kind="PersonAdd" Width="50" Height="50" Margin="0 0 20 0" Foreground="{DynamicResource MaterialDesignPaper}" />
+                    <TextBlock VerticalAlignment="Center" Style="{StaticResource MaterialDesignDisplay1TextBlock}" Foreground="{DynamicResource MaterialDesignPaper}">
                         Novi slog
                     </TextBlock>
                 </StackPanel>
@@ -55,18 +55,18 @@
 
             <TextBox Grid.Row="1" Name="idTextBox" Width="150" materialDesign:HintAssist.Hint="Identifikacija" Style="{StaticResource MaterialDesignFloatingHintTextBox}" VerticalAlignment="Center">
                 <TextBox.Text>
-                    <Binding Path="Record.Person.Id" ValidatesOnDataErrors="True" UpdateSourceTrigger="PropertyChanged" Mode="OneWayToSource">
+                    <Binding Path="NewPerson.Id" ValidatesOnDataErrors="True" UpdateSourceTrigger="PropertyChanged" Mode="OneWayToSource">
                         <Binding.ValidationRules>
                             <windows:IntegerValidation/>
                         </Binding.ValidationRules>
                     </Binding>
                 </TextBox.Text>
             </TextBox>
-            <TextBox Grid.Row="1" Grid.Column="1" Width="150" materialDesign:HintAssist.Hint="Ime i prezime" Text="{Binding Record.Person.FullName, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged, Mode=OneWayToSource}" Style="{StaticResource MaterialDesignFloatingHintTextBox}" VerticalAlignment="Center" />
-            <TextBox Grid.Row="2" Width="150" materialDesign:HintAssist.Hint="Adresa" Text="{Binding Record.Person.Adress, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged, Mode=OneWayToSource}" Style="{StaticResource MaterialDesignFloatingHintTextBox}" VerticalAlignment="Center" />
+            <TextBox Grid.Row="1" Grid.Column="1" Width="150" materialDesign:HintAssist.Hint="Ime i prezime" Text="{Binding NewPerson.FullName, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged, Mode=OneWayToSource}" Style="{StaticResource MaterialDesignFloatingHintTextBox}" VerticalAlignment="Center" />
+            <TextBox Grid.Row="2" Width="150" materialDesign:HintAssist.Hint="Adresa" Text="{Binding NewPerson.Adress, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged, Mode=OneWayToSource}" Style="{StaticResource MaterialDesignFloatingHintTextBox}" VerticalAlignment="Center" />
             <TextBox Grid.Row="2" Name="ageTextBox" Grid.Column="1" Width="150" materialDesign:HintAssist.Hint="Broj godina" Style="{StaticResource MaterialDesignFloatingHintTextBox}" VerticalAlignment="Center">
                 <TextBox.Text>
-                    <Binding Path="Record.Person.Age" ValidatesOnDataErrors="True" UpdateSourceTrigger="PropertyChanged" Mode="OneWayToSource" Converter="{StaticResource emptyConverter}">
+                    <Binding Path="NewPerson.Age" ValidatesOnDataErrors="True" UpdateSourceTrigger="PropertyChanged" Mode="OneWayToSource" Converter="{StaticResource emptyConverter}">
                         <Binding.ValidationRules>
                             <windows:EmptyIntegerValidation/>
                         </Binding.ValidationRules>
