--- a/Code/OrganizationOfData.DesktopClient/Views/ZoneControl.xaml
+++ b/Code/OrganizationOfData.DesktopClient/Views/ZoneControl.xaml
@@ -1,13 +1,13 @@
-﻿<UserControl x:Class="OrganizationOfData.DesktopClient.Views.BucketMemoryControl"
+﻿<UserControl x:Class="OrganizationOfData.DesktopClient.Views.ZoneControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:OrganizationOfData.DesktopClient.Views"
-             xmlns:viewModels="clr-namespace:OrganizationOfData.DesktopClient.ViewModels"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:viewModels="clr-namespace:OrganizationOfData.DesktopClient.ViewModels"
              mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance {x:Type viewModels:BucketMemoryControlViewModel}}"
+             d:DataContext="{d:DesignInstance {x:Type viewModels:ZoneControlViewModel}}"
              TextElement.Foreground="{DynamicResource MaterialDesignBody}"
              TextElement.FontWeight="Regular"
              TextElement.FontSize="13"
@@ -16,14 +16,10 @@
              Background="Transparent"
              FontFamily="{DynamicResource MaterialDesignFont}"
              Height="Auto" Width="Auto">
-    <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth3" Background="{DynamicResource PrimaryHueMidBrush}" Foreground="{DynamicResource MaterialDesignPaper}" Margin="5" Padding="10">
-        <StackPanel>
-            <TextBlock FontSize="20">
-                Memorija
-            </TextBlock>
-            <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-                <local:BucketControl DataContext="{Binding BucketControlViewModel}" Margin="0 0 0 10" />
-            </ScrollViewer>
-        </StackPanel>
-    </materialDesign:Card>
+    <UserControl.Resources>
+        <DataTemplate x:Key="BucketControl">
+            <local:BucketControl />
+        </DataTemplate>
+    </UserControl.Resources>
+    <ItemsControl ItemsSource="{Binding BucketControlViewModels}" ItemTemplate="{StaticResource BucketControl}" />
 </UserControl>
